Fix layout issues and add styling for popover

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,8 +41,9 @@ summary:focus {
   grid-gap: 10px;
 }
 
-#sub_header > details, #sub_header > section {
-  background-color: rgba(230,230,230,100);
+#sub_header > details, 
+#sub_header > section {
+  background-color: rgb(230,230,230);
   padding: 10px;
   border-radius: 5px;
 }
@@ -75,20 +76,21 @@ summary:focus {
   width: 100%;
 }
 
-#definitions, #english_translations {
+#definitions, 
+#english_translations {
   border: 1px solid lightgrey;
   margin: 10px 0;
   border-radius: 5px;
 }
 
-#definitions h3, #english_translations h3 {
+#definitions .section_heading, 
+#english_translations .section_heading {
   padding: 10px 0 0 10px;
   margin: 0;
-  font-size: medium;
-  font-weight: normal;
 }
 
-#definitions > article, #english_translations > article {
+#definitions > article, 
+#english_translations > article {
   display: grid;
   grid-gap: 10px;
   margin: 10px;
@@ -97,41 +99,43 @@ summary:focus {
 }
 
 #definitions > article {
-  grid-template-columns: min-content 1fr min-content;
+  grid-template-columns: min-content 1fr auto;
 }
 
 #english_translations > article {
   grid-template-columns: min-content min-content 1fr min-content;
 }
 
-#definitions > article:last-of-type, #english_translations > article:last-of-type {
+#definitions > article:last-of-type, 
+#english_translations > article:last-of-type {
     border-bottom: none;
 }
 
-#definitions .translation_line > p, #english_translations .translation_line > p {
-    display: inline-block;
+#definitions .translation_line > p, 
+#english_translations .translation_line > p {
+  display: inline-block;
   margin-right: 5px;
 }
 
-#definitions .number, #english_translations .number {
+#definitions .number, 
+#english_translations .number {
   grid-column: 1;
   font-size: smaller;
   align-self: center;
   color: grey;
 }
 
-#definitions .badges, #english_translations .badges {
+#definitions .badges, 
+#english_translations .badges {
   display: flex;
+  flex-wrap: wrap;
+  overflow-x: hidden;
 }
 
 #containing_kanji a {
   color: black;
   font-size: larger;
   margin-right: 5px;
-}
-
-#sentences {
-  max-width: 600px;
 }
 
 .sentence {
@@ -148,7 +152,7 @@ summary:focus {
   display: inline-block;
   padding: 2px 5px;
   margin: 0 2px;
-  background: rgba(230,230,230,100);
+  background: rgb(230,230,230);
   width: min-content;
   height: min-content;
   white-space: nowrap;
@@ -156,9 +160,48 @@ summary:focus {
   font-size: 80%;
 }
 
+/* Popup style - All prefaced with html.apple_client-panel */
+
+/* Hide subheader and badges to reduce onscreen elements */
+html.apple_client-panel #sub_header,
+html.apple_client-panel .badge,
+.section_heading {
+  display: none;
+}
+
+html.apple_client-panel #page_title {
+  font-size: small;
+}
+
+/* Remove background colouring and replace with a border element */
+html.apple_client-panel #definitions,
+html.apple_client-panel #definitions > article,
+html.apple_client-panel #english_translations, 
+html.apple_client-panel #english_translations > article {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+html.apple_client-panel #definitions .translation_line > p, 
+html.apple_client-panel #english_translations .translation_line > p {
+  margin-right: 2px;
+}
+
+html.apple_client-panel #definitions .number, 
+html.apple_client-panel #english_translations .number {
+  font-size: 10px;
+}
+
+/* End popup styles */
+
 @media (prefers-dark-interface)
 {
 	body {
 		color: white;
 	}
+  
+  #sub_header > details, #sub_header > section, .badge {
+    background-color: rgb(80,80,80);
+  }
 }
